# Kanvas

./: .gitignore  LICENSE  build.gradle.kts  dockspace.json  settings.gradle.kts
.github/workflows/: kanvas-vk-native.yaml
app/: build.gradle.kts
app/src/androidMain/: AndroidManifest.xml
app/src/jsMain/resources/: index.html
fmm/: build.gradle.kts
fmm-ksp/src/main/resources/templates/: PrimitiveList.txt
fmm/src/cpp/cmemory/jni/: jni_cmemory.cpp
gradle/: libs.versions.toml
kanvas/: build.gradle.kts
kanvas-assetc/: build.gradle.kts
kanvas-assetc-app/: build.gradle.kts
kanvas-assetc-app/icons/: KanvasLogo.icns  ic_kanvas.icns
kanvas-assetc/src/desktopMain/kotlin/com.cws.kanvas.assetc/: ImageLoader.kt  ModelLoader.kt  ShaderCompiler.kt  SoundLoader.kt
kanvas-editor/: build.gradle.kts
kanvas-gfx/: build.gradle.kts
kanvas-gfx/src/commonMain/proto/: render_api.proto
kanvas-gfx/src/cpp/STC/: CMakeLists.txt  pch.cpp  pch.hpp
kanvas-gfx/src/cpp/STC/backend/: Attribute.hpp  Binding.hpp  Blending.hpp  Buffer.hpp  CommandBuffer.hpp  Context.cpp  Context.hpp  Device.cpp  Device.hpp  DeviceQueue.hpp  Handle.hpp  Pipeline.hpp  RenderTarget.hpp  Resource.hpp  Shader.hpp  Surface.cpp  Surface.hpp  Sync.hpp  Texture.hpp
kanvas-gfx/src/cpp/STC/backend/metal/: Context.mm  Handle.metal.hpp  Handle.mm  Handle.mtl.hpp
kanvas-gfx/src/cpp/STC/backend/vk/: Binding.vk.cpp  Buffer.vk.cpp  CommandBuffer.vk.cpp  Context.vk.cpp  DescriptorPools.cpp  DescriptorPools.hpp  Device.vk.cpp  DeviceQueue.vk.cpp  Handle.vk.hpp  Pipeline.vk.cpp  RenderTarget.vk.cpp  Shader.vk.cpp  Surface.vk.cpp  Texture.vk.cpp  VulkanAllocator.hpp
kanvas-gfx/src/cpp/STC/backend/webgpu/: Binding.webgpu.cpp  Buffer.webgpu.cpp  CommandBuffer.webgpu.cpp  Context.webgpu.cpp  Device.webgpu.cpp  DeviceQueue.webgpu.cpp  Handle.webgpu.cpp  Handle.webgpu.hpp  Pipeline.webgpu.cpp  RenderTarget.webgpu.cpp  Shader.webgpu.cpp  Surface.webgpu.cpp  Texture.webgpu.cpp
kanvas-gfx/src/cpp/STC/bridges/: FileBridge.hpp  LogBridge.cpp  LogBridge.hpp  RenderApiBridge.cpp  RenderApiBridge.hpp  RenderBridge.cpp  RenderBridge.hpp  RenderConfig.hpp
kanvas-gfx/src/cpp/STC/bridges/cinterop/: LogBridge.cinterop.cpp  RenderBridge.cinterop.cpp
kanvas-gfx/src/cpp/STC/bridges/jni/: LogBridge.jni.cpp  RenderApiBridge.jni.cpp  RenderBridge.jni.cpp
kanvas-gfx/src/cpp/STC/bridges/wasm/: FileBridge.wasm.cpp  LogBridge.wasm.cpp
kanvas-gfx/src/cpp/STC/core/: logger.hpp  memory.cpp  memory.hpp  thread_pool.hpp  types.hpp
kanvas-gfx/src/cpp/STC/frontend/: Frame.hpp  RenderApi.cpp  RenderApi.hpp  RenderApiCreateInfo.hpp  RenderThread.cpp  RenderThread.hpp  RenderUploader.cpp  RenderUploader.hpp  Renderer.cpp  Renderer.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  ShaderManager.hpp  Vertex.hpp  gfx_utils.cpp
kanvas-gfx/src/cpp/STC/frontend/buffers/: CameraBuffer.hpp  IndirectBuffer.cpp  IndirectBuffer.hpp  InstanceBuffer.cpp  InstanceBuffer.hpp  ItemBuffer.cpp  ItemBuffer.hpp  ListBuffer.cpp  ListBuffer.hpp  MaterialBuffer.hpp  MeshBuffer.cpp  MeshBuffer.hpp  StorageBuffer.hpp  TextureBuffer.cpp  TextureBuffer.hpp  UniformBuffer.hpp
kanvas-gfx/src/cpp/STC/scripts/: premake.py
kanvas-gfx/src/cpp/STC/shaders/: model.frag.glsl  model.vert.glsl
kanvas-math/: build.gradle.kts
kanvas-rendering/: build.gradle.kts
kanvas-rendering/src/cpp/STC/: CMakeLists.txt  pch.hpp
kanvas-rendering/src/cpp/STC/backend/: Binding.hpp  Blending.hpp  Buffer.hpp  Pipeline.hpp  Resource.hpp  Shader.hpp  Surface.hpp  Texture.hpp
kanvas-rendering/src/cpp/STC/bridges/: LogBridge.cpp  LogBridge.hpp
kanvas-server/: build.gradle.kts
kanvas-shaderc/: build.gradle.kts
kanvas-shaderc-sandbox/: build.gradle.kts
kanvas-sound/: build.gradle.kts
kanvas-sound/src/nativeMain/kotlin/: RenderContext.kt
kanvas-spirv/: .gitignore  build.gradle.kts
kanvas-vk/: build.gradle.kts
kanvas-vk-contract/: build.gradle.kts
kanvas-vk-jvm/: build.gradle.kts
kanvas-vk-native/: build.gradle.kts
kanvas-vk-native/src/cinterop/: vulkan.def
kanvas-vk/src/cinterop/: vk.def
kanvas-vk/src/cpp/vk/: CMakeLists.txt
kanvas-vk/src/cpp/vk/api/: LogBridge.h  ResultBridge.h  Vk.h  VkBindingLayout.cpp  VkBindingLayout.hpp  VkBufferResource.cpp  VkBufferResource.hpp  VkCheck.hpp  VkCommandBufferResource.cpp  VkCommandBufferResource.hpp  VkContext.cpp  VkContext.hpp  VkDescriptors.cpp  VkDeviceQueue.cpp  VkDeviceQueue.hpp  VkInfo.h  VkPipe.cpp  VkPipe.hpp  VkRenderTarget.cpp  VkRenderTarget.hpp  VkShader.cpp  VkShader.hpp  VkSurface.cpp  VkSurface.hpp  VkSync.cpp  VkSync.hpp  VkTexture.cpp  VkTexture.hpp  VulkanAllocator.hpp
kanvas-vk/src/cpp/vk/core/: LogBridge.cpp  ResultBridge.cpp  logger.cpp  logger.hpp  memory.cpp  memory.hpp  thread_pool.cpp  thread_pool.hpp
kanvas-vk/src/cpp/vk/jni/: Vk.jni.cpp
kanvas-vk/src/cpp/vk/src/: VkBindingLayout.cpp  VkBindingLayout.hpp  VkBufferResource.cpp  VkBufferResource.hpp  VkCheck.hpp  VkCommandBufferResource.cpp  VkCommandBufferResource.hpp  VkCommon.hpp  VkContext.cpp  VkContext.hpp  VkDescriptors.cpp  VkDescriptors.hpp  VkDeviceQueue.cpp  VkDeviceQueue.hpp  VkPipe.cpp  VkPipe.hpp  VkRenderTarget.cpp  VkRenderTarget.hpp  VkSamplerResource.cpp  VkSamplerResource.hpp  VkShader.cpp  VkShader.hpp  VkSurface.cpp  VkSurface.hpp  VkSync.cpp  VkTexture.cpp  VkTexture.hpp  VkTextureResource.cpp  VkTextureResource.hpp  vk_mem_alloc.h
kanvas-vk/src/jvmMain/cpp/vk/api/: Vk.h  (+25 more)
kanvas-vk/src/nativeMain/kotlin/: RenderContext.kt
kanvas-vk/src/vkNativeMain/kotlin/: test.kt
kanvas-wgpu/: build.gradle.kts
kanvas/src/jsMain/resources/: mic-processor.js  player-processor.js
kanvas/src/moltenVkMain/cinterop/: vulkan.def
kanvaslab/: build.gradle.kts
kanvaslab/src/jsMain/resources/: index.html
kotlin-std/: build.gradle.kts
kotlin-std/src/cpp/cmemory/: CMakeLists.txt
print/: build.gradle.kts
print-sandbox/: build.gradle.kts
printer/: build.gradle.kts
printer-sandbox/: build.gradle.kts
printer-sandbox/src/commonMain/kotlin/: PrinterTests.kt
printer-sandbox/src/jsMain/resources/: index.html
scripts/: jni.gradle.kts
(+1084 files in other folders)
